--- a/src/Components/Musik/Musik.css
+++ b/src/Components/Musik/Musik.css
@@ -1,14 +1,11 @@
-.musik-container {
-  width: 60%;
-  display: flex;
-  flex-direction: column;
+
+.column-container .musik-image {
+  width: 50%;
   margin: auto;
-  padding: 0 0 30px 0;
 }
 
-.musik-container .musik-image {
-  width: 55%;
-  margin: auto;
+.musik-upphov a {
+  display: inline;
 }
 
 .youtube-container {
@@ -76,7 +73,10 @@
   opacity: 1;
 }
 
-.social-link {
-  text-decoration: underline;
-  font-weight: bold;
+@media (max-width: 950px) {
+
+  .column-container .musik-image {
+    width: 100%;
+  }
+
 }
