--- a/src/Components/Medverkande/Medverkande.css
+++ b/src/Components/Medverkande/Medverkande.css
@@ -7,7 +7,7 @@
 }
 
 .medverkande-container .medverkande-image {
-  width: 50%;
+  width: 40%;
   margin: auto;
 }
 
@@ -19,25 +19,27 @@
   width: 50%;
 }
 
-.medverkande-container {
-  padding-bottom: 20px;
-}
-
-.medverkande-container h2 {
-  font-weight: bold;
-  color: green;
-}
-
 .medverkande-container h3 {
   font-size: 24px;
   color: black;
 }
 
-.medverkande-container h4 {
-
-}
-
 .medverkande-container p {
   margin: 0;
   padding: 0;
+}
+
+@media (max-width: 950px) {
+
+  .medverkande-container .medverkande-image {
+    width: 100%;
+  }
+
+  .medverkande-container .medverkande-info-container {
+    flex-direction: column;
+  }
+
+  .medverkande-container .medverkande-info-container .medverkande-info {
+    width: 100%;
+  }
 }
