--- a/src/Components/Miljo/Miljo.css
+++ b/src/Components/Miljo/Miljo.css
@@ -1,16 +1,15 @@
-.mijo-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 80%;
-  margin: auto;
-  padding: 30px 0;
-}
 
-.mijo-container .mijo-image {
 
-}
 
-.mijo-container .mijo-info {
+@media (max-width: 950px) {
+
+  .miljo {
+    width: 100%;
+  }
+
+  .miljo .mijo-info {
+    width: 70%;
+    margin: auto;
+  }
 
 }
