--- a/src/Components/Press/Press.css
+++ b/src/Components/Press/Press.css
@@ -1,16 +1,8 @@
-.press-container {
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-  padding: 30px 0;
-}
-
-.press-container .press-image { 
+.column-container .press-image { 
   display: flex;
 }
 
-.press-container .press-image img {
+.column-container .press-image img {
   height: 100px;
   margin-right: 20px;
 }
