--- a/src/Components/Privat/Privat.css
+++ b/src/Components/Privat/Privat.css
@@ -1,12 +1,12 @@
-.privat-container {
-  width: 60%;
-  display: flex;
-  flex-direction: column;
+.column-container .privat-image {
+  width: 30%;
   margin: auto;
-  padding: 30px 0;
 }
 
-.privat-container .privat-image {
-  width: 60%;
-  margin: auto;
+@media (max-width: 950px) {
+
+  .column-container .privat-image {
+    width: 100%;
+  }
+
 }
