--- a/src/Components/Raffe/Raffe.css
+++ b/src/Components/Raffe/Raffe.css
@@ -1,23 +1,35 @@
-.raffe-container {
-  width: 70%;
-  display: flex;
-  margin: auto;
-  padding: 30px 0 0 0;
+.raffe {
+  padding-bottom: 0px;
 }
 
-.raffe-container .raffe-image {
-  width: 50%;
+.row-container .raffe-image {
+  width: 45%;
 }
 
-.raffe-container .raffe-info {
-  width: 50%;
+.row-container .raffe-info {
+  width: 55%;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.raffe-container .raffe-info a {
-  color: green;
-  text-decoration: underline;
+.row-container .raffe-info a {
   margin: 0;
+}
+
+@media (max-width: 950px) {
+
+  .raffe {
+    flex-direction: column;
+    padding-bottom: 30px;
+  }
+
+  .row-container .raffe-image {
+    width: 100%;
+  }
+
+  .row-container .raffe-info {
+    width: 100%;
+  }
+
 }
