--- a/src/Components/Skola/Skola.css
+++ b/src/Components/Skola/Skola.css
@@ -1,26 +1,12 @@
-.skola-container {
-  width: 70%;
-  display: flex;
-  flex-direction: column;
+.column-container .skola-image {
+  width: 35%;
   margin: auto;
-  align-items: center;
-  padding: 30px 0;
 }
 
-.skola-container .skola-image {
-  width: 40%;
-}
+@media (max-width: 950px) {
 
-.skola-container .skola-info {
-  width: 90%;
-}
+  .column-container .skola-image {
+    width: 100%;
+  }
 
-.skola-container .skola-info a {
-  text-decoration: underline;
-  padding: 10px 0;
-  display: inline-block;
-}
-
-.skola-container .skola-info .compact a{
-  padding: 0;
 }
