--- a/src/Components/Webshop/Webshop.css
+++ b/src/Components/Webshop/Webshop.css
@@ -1,32 +1,32 @@
-.webshop-container {
-  display: flex;
-  justify-content: center;
-  width: 60%;
-  margin: auto;
-  padding: 30px 0;
-}
-
-.webshop-container .webshop-image {
+.row-container .webshop-image {
   width: 50%;
 }
 
-.webshop-container .webshop-info {
+.row-container .webshop-info {
   display: flex;
   width: 45%;
   flex-direction: column;
   justify-content: center;
 }
 
-.webshop-container .webshop-info a {
-  padding: 15px 0;
-  text-decoration: underline;
+.row-container .webshop-info a {
+  display: inline;
 }
 
-.extra {
-  font-weight: bold;
+.extra a {
   font-size: 20px;
 }
 
-.big-text {
-  font-size: 18px;
+@media (max-width: 950px) {
+  .webshop {
+    flex-direction: column;
+  }
+
+  .row-container .webshop-image {
+    width: 100%;
+  }
+
+  .row-container .webshop-info {
+    width: 100%;
+  }
 }
