--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 body, html{
+  height: calc(100% - 80px);
   padding: 0;
   margin: 0;
 }
@@ -11,6 +12,7 @@ body, html{
   height: 100%;
   margin-top: 80px;
   margin-bottom: 89px;
+  padding-bottom: 89px;
 }
 
 .app {
